--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,13 @@
         android:roundIcon="@drawable/sikika_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomePage"></activity>
-        <activity android:name=".Intro" android:theme="@style/customFullScreen"/>
+        <activity
+            android:name=".HomePage"
+            android:label="@string/title_activity_home_page"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".Intro"
+            android:theme="@style/customFullScreen" />
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize"
