--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,14 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     def room_version = "1.1.1"
+    def glideVersion = "4.9.0"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     testImplementation "android.arch.persistence.room:testing:$room_version"
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.karumi:dexter:5.0.0'
+    implementation 'org.jsoup:jsoup:1.11.2'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 }
